# slurp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  README.md  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pre-commit-autoupdate.yml  release.yml
docs/superpowers/plans/: 2026-06-11-cleanup-robustness.md  2026-06-12-settings-pydantic.md
docs/superpowers/specs/: 2026-06-11-cleanup-robustness-design.md  2026-06-11-local-connector-design.md  2026-06-12-settings-pydantic-design.md
infra/: docker-compose.yaml  kraft-single.properties
infra/etc/: redpanda.yaml
scripts/: confluence_crawler.py  confluence_downloader.py  eval_data_conversion_script.py  openrouter_client.py  rag_dataset_generator.py  update_agentic_eval_attachments.py
slurp/: __main__.py  hash.py
slurp/adapters/: asyncio.py  instrumentation.py  kafka.py
slurp/adapters/downloader/: confluence.py  local.py  registry.py
slurp/adapters/generators/: llm.py
slurp/adapters/generators/prompts/: de.py  en.py
slurp/adapters/mutators/: html_parser.py  sqlite_persistence.py
slurp/adapters/producers/: confluence.py  local.py
slurp/domain/: config.py  models.py  orm_models.py  ports.py  settings.py  validation.py
slurp/skill/: SKILL.md
slurp/usecases/: render.py  scraper.py  skill.py  worker.py
tests/: test_config_validation.py  test_confluence_config.py  test_confluence_downloader.py  test_confluence_producer.py  test_downloader_registry.py  test_hash.py  test_html_parser.py  test_instrumentation.py  test_kafka_submitter.py  test_llm_difficulty.py  test_llm_generate_pairing.py  test_llm_provider.py  test_llm_templates.py  test_local_downloader.py  test_local_producer.py  test_models_enums.py  test_render.py  test_scraper_empty.py  test_settings_loader.py  test_settings_models.py  test_skill.py  test_sqlite_persistence.py  test_token_config.py  test_worker_generator.py
